# f5-waf-automation

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: dvwa-awaf-apply-guide.md  step-by-step-dvwa.md
examples/logs/: waf-events.jsonl
examples/policies/: api-awaf-policy.json  asm-fragment.json  baseline-awaf-policy.json
src/f5_waf_toolkit/: __init__.py  cli.py  client.py  config.py  logging_profiles.py  logs.py  policies.py  profiles.py
tests/: test_cli.py  test_logging_profiles.py  test_logs.py  test_policies.py  test_profiles.py
